--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
         <title></title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!-- for other features refer to https://www.w3.org/wiki/WebSchemas/Accessibility -->
+    <meta itemprop="accessibilityFeature" content="displayTransformability"/>
+    <meta itemprop="accessibilityFeature" content="highContrastDisplay"/>
+    <meta itemprop="accessibilityFeature" content="alternativeText"/>
+    <meta itemprop="accessibilityFeature" content="fullKeyboardControl"/>
+    <meta itemprop="accessibilityFeature" content="fullTouchControl"/>
+    <meta itemprop="accessibilityFeature" content="structuralNavigation"/>
         <link href="style.css" rel="stylesheet">
     </head>
     <body>
