--- a/index.html
+++ b/index.html
@@ -21,10 +21,13 @@
         <a class="active" href=index.html>Simple Interest Calculator</a>
     </nav>
     <p>
+    <form id="myForm">
     Principal Amount(P): <input id="p" type ="number" required></br></br>
     Rate (R):             <input id="r" type ="number"  required></br></br>
     Time (t):      <input id="n" type ="number"  required></br></br>
     <button onClick="calculate()">Calculate the simple interest</button>
+    <button  onclick="myFunction()" value="Reset Fields">Reset Fields</button>
+</form>
     <p id="result"></p>
     <footer>
         <p id="footer-text">Copyright &copy; Imoh Etuk 2020</p>
