--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     Principal Amount(P): <input id="p" type ="number" required></br></br>
     Rate (R):             <input id="r" type ="number"  required></br></br>
     Time (t):      <input id="n" type ="number"  required></br></br>
-    <button onClick="calculate()">Calculate the simple interest</button><button  onclick="myFunction()" value="Reset Fields">Reset Fields</button>
+    <button onClick="calculate()">Calculate</button><button  onclick="myFunction()" value="Reset Fields">Reset Fields</button>
 </form>
     <p id="result"></p>
     <footer>
