--- a/index.html
+++ b/index.html
@@ -21,11 +21,10 @@
         <a class="active" href=index.html>Simple Interest Calculator</a>
     </nav>
     <p>
-    <form id="myForm">
     Principal Amount(P): <input id="p" type ="number" required></br></br>
     Rate (R):             <input id="r" type ="number"  required></br></br>
     Time (t):      <input id="n" type ="number"  required></br></br>
-    <button onClick="calculate()">Calculate</button><button  onclick="myFunction()" value="Reset Fields">Reset Fields</button>
+    <button onClick="calculate()">Calculate</button><form id="myForm"><button  onclick="myFunction()" value="Reset Fields">Reset Fields</button>
 </form>
     <p id="result"></p>
     <footer>
